# PokeHerFace

./: .gitignore  AGENT.MD  AGENTS.MD  HANDOFF_NEW_DEVELOPER.md  PLAY_MANUAL.ps1  README.MD  currentTaskSprint.MD  geminiagent.MD  requirements.txt  shared_feature_contract.py  tesseract_test.ps1  tesseract_test_noengine.ps1
1_Engine_Core/: .gitattributes  .gitmodules  CMakeLists.txt  README.md  compile.txt  compile_flags.txt  vcpkg.json
1_Engine_Core/.github/workflows/: new_ci.yml
1_Engine_Core/gui/: gui.cpp  shark.rc
1_Engine_Core/gui/components/: CardButton.cpp  CardButton.hh  ComboStrategyDisplay.cpp  ComboStrategyDisplay.hh  Page1_Settings.cpp  Page1_Settings.hh  Page2_Board.cpp  Page2_Board.hh  Page3_HeroRange.cpp  Page3_HeroRange.hh  Page4_VillainRange.cpp  Page4_VillainRange.hh  Page5_Progress.cpp  Page5_Progress.hh  Page6_Strategy.cpp  Page6_Strategy.hh
1_Engine_Core/gui/utils/: Colors.hh  EmbeddedLogo.hh  FlGridCompat.hh  MemoryUtil.hh  RangeData.hh
1_Engine_Core/icons/: generated_logo.icns
1_Engine_Core/include/: card.h  phevaluator.h  rank.h
1_Engine_Core/include/PokerHandEvaluator/: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
1_Engine_Core/include/PokerHandEvaluator/.github/workflows/: ci.yml  pre-commit.yml
1_Engine_Core/include/PokerHandEvaluator/Documentation/: Algorithm.md  README.md
1_Engine_Core/include/PokerHandEvaluator/cpp/: .clang-format-ignore  .gitignore  CMakeLists.txt  README.md  build.zig  phevaluatorConfig.cmake.in
1_Engine_Core/include/PokerHandEvaluator/cpp/benchmark/: benchmark.cc  benchmark_plo4.cc  benchmark_plo5.cc  benchmark_plo6.cc
1_Engine_Core/include/PokerHandEvaluator/cpp/examples/: .gitignore  c_example.c  cpp_example.cc  evaluator5_standalone_example.cc  evaluator6_standalone_example.cc  evaluator7_standalone_example.cc  omaha_example.cc  plo4_example.cc  plo5_example.cc  plo6_example.cc
1_Engine_Core/include/PokerHandEvaluator/cpp/include/phevaluator/: card.h  card_sampler.h  phevaluator.h  rank.h
1_Engine_Core/include/PokerHandEvaluator/cpp/src/: 7462.c  card_sampler.cc  dptables.c  evaluator5.c  evaluator5.cc  evaluator6.c  evaluator6.cc  evaluator7.c  evaluator7.cc  evaluator8.c  evaluator9.c  evaluator_plo4.c  evaluator_plo4.cc  evaluator_plo5.c  evaluator_plo5.cc  evaluator_plo6.c  evaluator_plo6.cc  hash.c  hash.h  hashtable.c  hashtable5.c  hashtable6.c  hashtable7.c  hashtable8.c  hashtable9.c  rank.c  tables.h  tables_bitwise.c
1_Engine_Core/include/PokerHandEvaluator/cpp/test/: evaluation.cc  evaluation5_standalone.cc  evaluation6_standalone.cc  evaluation7_standalone.cc  evaluation_plo4.cc  evaluation_plo5.cc  evaluation_plo6.cc  rank.cc
1_Engine_Core/include/PokerHandEvaluator/cpp/test/kev/: arrays.h  fast_eval.c  index52c7.h  kev_eval.c  kev_eval.h
1_Engine_Core/include/PokerHandEvaluator/python/: README.md  benchmark.py  examples.py  pyproject.toml
1_Engine_Core/include/PokerHandEvaluator/python/phevaluator/: __init__.py  card.py  evaluator.py  evaluator_omaha.py  hash.py  utils.py
1_Engine_Core/include/PokerHandEvaluator/python/phevaluator/tables/: __init__.py
1_Engine_Core/include/PokerHandEvaluator/python/tests/: test_card.py  test_evalator_omaha.py  test_evaluator.py
1_Engine_Core/include/PokerHandEvaluator/python/tests/table_tests/: test_dptables.py  test_hashtable.py  test_hashtable5.py  test_hashtable6.py  test_hashtable7.py  utils.py
1_Engine_Core/include/PokerHandEvaluator/test/: README.md
1_Engine_Core/include/PokerHandEvaluator/test/seven/: string_input_tests.csv
1_Engine_Core/include/PokerHandEvaluator/test/six/: id_input_tests.csv  string_input_tests.csv
1_Engine_Core/src/: Helper.hh  main.cpp
1_Engine_Core/src/game/: Action.hh  Game.hh  State.hh
1_Engine_Core/src/hands/: Card.hh  PreflopCombo.hh  PreflopRange.cpp  PreflopRange.hh  PreflopRangeManager.cpp  PreflopRangeManager.hh  RiverCombo.hh  RiverRangeManager.cpp  RiverRangeManager.hh
1_Engine_Core/src/solver/: BestResponse.cpp  BestResponse.hh  CFRHelper.cpp  Isomorphism.hh  ParallelDCFR.cpp  Solver.hh
1_Engine_Core/src/trainer/: DCFR.cpp  DCFR.hh
1_Engine_Core/src/tree/: GameTree.cpp  GameTree.hh  Nodes.hh  TreeBuilderSettings.hh
1_Engine_Core/testing/: card_testing.cpp  equity_calc.cpp  game_tree.cpp  hand_printing.cpp  json_test.cpp  preflop_ranges.cpp  tbb.cpp
1_Engine_Core/testing/fixtures/: node_lock.sample.json  spot.sample.json
2_Neural_Brain/: README.md
4_LLM_Bridge/: README.md  analyze_shadow_dumps.py  benchmark_models.py  bridge_client.py  bridge_server.py  build_canonical_pack.py  build_spot_pack.py  extract_opponent_features.py  llm_client.py  neural_brain_adapter.py  node_lock_schema.json  phh_to_spot.py  run_acceptance_gate.py  run_stateful_sim.py  run_synthetic_hand_pack.py  run_true_backtest.py  tag_spot_classes.py
5_Vision_Extraction/: README.md  sharex_ingest.ps1
USER_ONLY/: 01_run_broad_tail_away.ps1  02_preflight_windows.ps1  03_test_stateful_sim_fast_live.ps1  04_test_acceptance_turn.ps1  05_test_acceptance_river.ps1  06_tester_ui.ps1  07_run_hotspot_shallow_pilot.ps1  README.txt
scripts/: analyze_neural_shadow.py  analyze_passive_errors.py  analyze_slow_spots.py  analyze_ui_queue_log.ps1  build_neural_dataset.py  check_neural_assets.py  check_neural_data_airgap.py  eval_local_neural_shadow.py  export_missing_reference_rows.py  label_reference_offline.py  preflight_windows.ps1  quality_gate_flop_distribution.py  reconcile_offline_label_manifest.py  repair_reference_label_facing_bet.py  replay_turn_nonpassive_benchmark.py  report_reference_label_postpass.py  run_broad_tail_away.ps1  run_canary.ps1  run_fast_live_tuning_sweep.ps1  run_hotspot_shallow_pilot.ps1  run_neural_collection_recipe.ps1  setup_local_neural_workspace.py  setup_windows.ps1  setup_wsl.sh  split_reference_labels.py  test_acceptance.ps1  test_all.ps1  test_api_progress.ps1  test_backtest_abc.ps1  test_ci.ps1  test_fast_profile.ps1  test_feature_contract_parity.py  test_helpers.ps1  test_multiseed_gauntlet.ps1  test_profile_contract.py  (+6 more)
(+69 files in other folders)
